# segauge-benchmark

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  modal_app.py  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
configs/: amos_modal.yaml  kits23_modal.yaml  kits23_seed.yaml
docs/: index.md  methodology.md  reproduce.md
methodology/: index.html
reproduce/: index.html
results/: kits23_modal.json  kits23_seed.json
search/: search_index.json
src/segbench/: __init__.py  cli.py  ranking.py  run.py  schema.py  site.py
src/segbench/datasets/: __init__.py  amos.py  base.py  kits.py
src/segbench/models/: __init__.py  base.py  ctfm.py  monai_bundle.py  moose.py  totalsegmentator.py
tests/: conftest.py  test_models.py  test_ranking.py  test_reproducibility.py  test_run.py
